# openclaw_auto_deloy

./: .env_example  .gitignore  README.md  build_exe.py  channels.example.json  openclaw_deploy.spec  pyproject.toml  requirements.txt
license_server/: .dockerignore  Dockerfile  __init__.py  add_license.py  app.py  docker-compose.yml  requirements.txt
openclaw_deploy/: __init__.py  __main__.py  channels_config.py  cli.py  deploy.py  docker-compose.yml  docker_installer.py  license.py  logger.py  machine_id.py
scripts/: generate_license_key.py  generate_license_keys.py
